WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
89433
REGRESSION(120552): Many tests timing out on Windows
https://bugs.webkit.org/show_bug.cgi?id=89433
Summary
REGRESSION(120552): Many tests timing out on Windows
Jon Honeycutt
Reported
2012-06-18 23:38:16 PDT
I think that any test using layoutTestController.waitUntilDone() is timing out on Windows after <
http://trac.webkit.org/changeset/120552
>.
Attachments
Patch
(1.75 KB, patch)
2012-06-19 01:10 PDT
,
Jon Honeycutt
aestes
: review+
aestes
: commit-queue-
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jon Honeycutt
Comment 1
2012-06-19 01:10:59 PDT
Created
attachment 148281
[details]
Patch
Andy Estes
Comment 2
2012-06-19 01:52:03 PDT
Comment on
attachment 148281
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=148281&action=review
> Source/WTF/ChangeLog:3 > + REGRESSION(120552): Many tests timing out on Windows
"REGRESSION (
r120552
): ...", for consistency.
> Source/WTF/wtf/CurrentTime.cpp:74 > +static const double hundredsOfNanosecondsPerMillisecond = 10000.0;
No need for the .0
Jon Honeycutt
Comment 3
2012-06-19 02:21:34 PDT
Thanks for the review! Landed in <
http://trac.webkit.org/changeset/120697
>.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug