REGRESSION(r120552): Many tests timing out on Windows https://bugs.webkit.org/show_bug.cgi?id=89433

Reviewed by Andy Estes.

* wtf/CurrentTime.cpp:
(WTF::lowResUTCTime):
It looks like there were two bugs:
1) the function was converting from 100ths of nanoseconds to seconds
   rather than 100s of nanoseconds to seconds by dividing by
   (nsPerSecond * 100) rather than (nsPerSecond / 100)
2) the function should've been returning milliseconds, not seconds



Canonical link: https://commits.webkit.org/107307@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@120697 268f45cc-cd09-0410-ab3c-d52691b4dbfc